Modified of to show de in Spanish

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         
                         <div class="canvas-box" style="position:absolute;left:0px;top:0px">
                             <input id="single-single-arc" class="knob with-subtext" data-min="0" data-max="100" value="75" data-bgColor="#340914" data-fgColor="#FF1509" data-fgColorMid="#f8009e" data-fgColorEnd="#f707e3" data-displayInput=true data-width="300" data-height="300" data-thickness=".2" data-bgthickness=".2" data-angleOffset=0 data-linecap=round data-readOnly=true data-inputColor="#ffffff" data-shadow=true data-shadowColor="#555555">
-                            <div class="subtext">of <span class="subtext-max">100</span> <span class="subtext-units">cals</span></div>
+                            <div class="subtext">de <span class="subtext-max">100</span> <span class="subtext-units">cals</span></div>
                         </div>
 
                     </div>
